sample/server-backup/retrieveUnpackaged/objects/Bundle_Item__c.object
<CustomObject>
    <fields>
        <fullName>Bundle__c</fullName>
        <label>Bundle</label>
        <referenceTo>Bundle__c</referenceTo>
        <relationshipLabel>Bundles</relationshipLabel>
        <relationshipName>Bundles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Merchandise__c</fullName>
        <label>Merchandise</label>
        <referenceTo>Merchandise__c</referenceTo>
        <relationshipLabel>Bundle Items</relationshipLabel>
        <relationshipName>Bundle_Items</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Qty__c</fullName>
        <label>Qty</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Bundle Item</label>
    <nameField>
        <displayFormat>MI-{0000000}</displayFormat>
        <label>Bundle Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bundle Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>